forEnersys/DavePkg/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Baan_Quote_Number__c</fullName>
        <label>Baan Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bill To from Quote</description>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Bill To)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <label>Bill To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_1__c</fullName>
        <label>Billing Street 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_2__c</fullName>
        <label>Billing Street 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <formula>Account.Company_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Notification_User__c</fullName>
        <formula>IF( Notification_User__r.Id = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Notification User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Account.Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Date__c</fullName>
        <label>Customer Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms_Code__c</fullName>
        <description>To BaaN:  Delivery Terms Code</description>
        <formula>Delivery_Terms__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Terms Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delivery Terms from Quote</description>
        <label>Delivery Terms</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Delivery Terms - DT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Orders (Delivery Terms from Quote)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <description>To BaaN:  End User Name</description>
        <formula>End_User__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>End User from Quote</description>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (End User)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Freight_Address__c</fullName>
        <label>3rd Party Freight Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Freight_Attn__c</fullName>
        <label>3rd Party Freight Attn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_City__c</fullName>
        <label>3rd Party Freight City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Country__c</fullName>
        <label>3rd Party Freight Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freight_Name__c</fullName>
        <label>3rd Party Freight Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_State__c</fullName>
        <label>3rd Party Freight State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Freight_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freight_Zipcode__c</fullName>
        <label>3rd Party Freight Zipcode</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Error__c</fullName>
        <description>BaaN Header Errors</description>
        <label>Header Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOB_Number__c</fullName>
        <formula>LOB__r.LOB__c</formula>
        <label>LOB#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOB</label>
        <referenceTo>LOB__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>To BaaN:  Notes from Quote to BaaN header</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notification_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_End_User__c</fullName>
        <label>End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Flow_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Flow Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Series_Code__c</fullName>
        <description>To BaaN:  Order Series Code</description>
        <formula>Order_Series__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Series Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Series__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Series from SAP Reference</description>
        <label>Order Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Order Series - OS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Orders (Order Series)</relationshipLabel>
        <relationshipName>Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type_Code__c</fullName>
        <description>To BaaN:  Order Type Code</description>
        <formula>Order_Type__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Type</description>
        <label>Order Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Order Type - OT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Validation_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used to override for validation, it is used mostly for test purpose only</inlineHelpText>
        <label>Order Validation Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Validation__c</fullName>
        <description>Order Validation if BaaN required fields are NOT blank</description>
        <formula>OR( Order_Validation_Override__c,
AND(
NOT(ISBLANK(Delivery_Terms_Code__c)),
NOT(ISBLANK(Order_Type_Code__c )),
NOT(ISBLANK(LOB_Number__c )),
NOT(ISBLANK(Payment_Terms_Code__c)),
NOT(ISBLANK(PoNumber)),
NOT(ISBLANK(Shipping_Street_1__c )),
NOT(ISBLANK(Shipping_City__c)),
NOT(ISBLANK(Shipping_State__c)),
NOT(ISBLANK(Shipping_Postal_code__c)),
NOT(ISBLANK(Shipping_Country__c)),
NOT(ISBLANK(Customer_Number__c)),
NOT(ISBLANK(Sales_Rep_Number__c)),
NOT(ISBLANK(Planned_Delivery_Date__c)),
NOT(ISBLANK( Order_Series__c ))
))</formula>
        <label>Order Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Code__c</fullName>
        <description>To BaaN:  Payment Term Code</description>
        <formula>Payment_Terms_Sold_To__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Terms from Sold To Account</description>
        <label>Payment Terms from Sold To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Payment Terms - PT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Orders (Payment Terms)</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Delivery_Date__c</fullName>
        <description>To BaaN:  Planned Delivery Date</description>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_B__c</fullName>
        <label>Reference B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The tax amount</description>
        <inlineHelpText>The tax amount</inlineHelpText>
        <label>Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalAmount__c</fullName>
        <description>The total order amount with tax included</description>
        <inlineHelpText>The total order amount with tax included</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <summarizedField>OrderItem.SBQQ__TotalAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Number__c</fullName>
        <description>non-logical data input field for Baan.</description>
        <inlineHelpText>non-logical data input field for Baan.</inlineHelpText>
        <label>Sales Rep #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Number_old__c</fullName>
        <description>To BaaN:  Sales Rep # based on user record</description>
        <formula>Sales_Rep__r.Sales_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep - old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Rep</description>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Code__c</fullName>
        <description>To BaaN:  Address Code from Ship To if exists</description>
        <formula>Select_Shipping_Address__r.Address_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Address Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Attn__c</fullName>
        <description>Attentionfield for Ship To</description>
        <label>Ship To Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_code__c</fullName>
        <label>Shipping Postal code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_1__c</fullName>
        <label>Shipping Street 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <label>Shipping Street 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Warehouse</description>
        <label>Warehouse</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Warehouse Codes - WC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Orders (Warehouse)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>Americas_Orders</fullName>
        <active>true</active>
        <label>Americas - Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Americas_Orders_Sent</fullName>
        <active>true</active>
        <description>Order sent to BaaN</description>
        <label>Americas - Orders - Sent</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Orders</fullName>
        <active>true</active>
        <label>EMEA - Orders</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Order_Flow_Must_Be_Used</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 Order_Flow_Used__c = FALSE,
 OR(
  NOT(CONTAINS($Profile.Name,&quot;System Administrator&quot;)),
  $User.Id &lt;&gt; $Label.Integration_User_ID
 )
)</errorConditionFormula>
        <errorMessage>Orders must be created from the Quote object.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rep_number_is_a_number</fullName>
        <active>true</active>
        <description>This rule will prevent a rep # is actually a number, not text</description>
        <errorConditionFormula>IF( ISBLANK(Sales_Rep_Number__c) , false,  NOT(ISNUMBER(  Sales_Rep_Number__c )))</errorConditionFormula>
        <errorDisplayField>Sales_Rep_Number__c</errorDisplayField>
        <errorMessage>A Sales Rep # number can not contain text</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_from_Changing_Order_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

				OR(
					   ISPICKVAL(Status, &quot;Accepted&quot;),
				    ISPICKVAL(Status, &quot;Rejected&quot;)
								),
				 $Profile.Name &lt;&gt; &quot;System Administrator&quot;
				)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You may not change the status</errorMessage>
    </validationRules>
</CustomObject>